<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多媒体故障设置与考核</string>
    <string name="action_logout">退出</string>
    <string name="Button_Back_BeCanceled">抱歉，返回键已被屏蔽！</string>
    <string name="Button_Ignition">点火</string>
    <string name="Button_Start">启动</string>
    <string name="Button_ShutDown">熄火</string>
    <string name="TheFailurePointSet">故障点设置</string>
    <string name="Button_PointOfFailureThat">故障点说明</string>
    <string name="Button_Mode_Teach">教学模式</string>
    <string name="Button_StateIsRead">状态读取</string>
    <string name="Button_SetAll">全部设置</string>
    <string name="Button_ClearAll">全部清除</string>
    <string name="button_send">发送考题</string>
    <string name="button_start_examination">开始考试</string>
    <string name="button_submit">提交试卷</string>
    <string name="already_send">已发送，可以考试</string>
    <string name="already_start">考试进行中，开始倒计时！</string>
    <!--<string name="already_start2">断路故障%1$s道题,虚接故障%2$s道题,短路故障%3$s道题目</string>-->
    <string name="already_start3">断路故障%1$s道题</string>
    <string name="already_start4">虚接故障%1$s道题</string>
    <string name="already_start5">短路故障%1$s道题</string>
    <string name="Back">返回</string>
    <string name="action_connect">蓝牙连接</string>
    <string name="action_close">断开连接</string>
    <string name="action_set_title">设置标题文字</string>
    <string name="action_change_orientation">横竖屏切换</string>
    <!-- Bluetooth Service -->
    <string name="bluetooth_connect_failed">连接失败</string>
    <string name="bluetooth_search">搜索</string>
    <string name="bluetooth_searching">正在搜索设备,请稍等...</string>
    <!-- Bluetooth Service End -->

    <string name="login_id_hint">请输入账号...</string>
    <string name="inputpasswordhint">输入密码...</string>
    <string name="shortfault">短路故障</string>
    <string name="falsefault">虚接故障</string>
    <string name="breakfault">断路故障</string>
    <string name="breakfault_01">故障设置</string>
    <string name="loginbtnstring">登录</string>

    <!-- media file -->

    <string name="media_file_cancle">搜索</string>


    <!--excel文件选择-->

    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="tag_title_OpenFile">打开文件</string>
    <string name="tag_fragment_FileSelect">Open File</string>
    <string name="tag_title_SaveFile">保存文件</string>
    <string name="tag_fragment_FileSave">Save File</string>
    <string name="tag_save_hint">请输入文件名</string>

    <!--serve-->
    <string name="start_server">启动服务器</string>
    <string name="stop_server">关闭服务器</string>

    <string name="server_start_succeed">服务器已经启动.</string>
    <string name="server_started">服务器正在运行.</string>

    <string name="server_stop_succeed">服务器已关闭。</string>

</resources>