<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/line01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_PointOfFailureThat"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_PointOfFailureThat"
            android:textSize="13sp" />
        <!-- android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp" -->
        <Button
            android:id="@+id/Button_Mode_Teach02"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_Mode_Teach"
            android:textSize="13sp" />
        <Button
            android:id="@+id/Button_StateIsRead"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:visibility="gone"
            android:background="@drawable/yellow"
            android:text="@string/Button_StateIsRead"
            android:textSize="15sp" />
        <!-- android:layout_marginRight="50dp" -->

        <Button
            android:id="@+id/Button_SetAll"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_SetAll"
            android:textSize="15sp" />
        <!-- android:layout_marginRight="50dp" -->

        <Button
            android:id="@+id/Button_ClearAll"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_ClearAll"
            android:textSize="15sp" />
        <!-- android:layout_marginRight="50dp" -->
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line01"
        android:layout_weight="4"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_Mode_Teach09"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_Mode_Teach"
            android:textSize="13sp" />
        <!-- android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp" -->

        <Button
            android:id="@+id/Button_an02"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_StateIsRead"
            android:textSize="15sp"
            android:visibility="invisible" />
        <!-- android:layout_marginRight="50dp" -->

        <Button
            android:id="@+id/Button_an03"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/yellow"
            android:text="@string/Button_SetAll"
            android:textSize="15sp"
            android:visibility="invisible" />
        <!-- android:layout_marginRight="50dp" -->

        <Button
            android:id="@+id/Button_an04"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/yellow"
            android:text="@string/Button_ClearAll"
            android:textSize="15sp"
            android:visibility="invisible" />
        <!-- android:layout_marginRight="50dp" -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line02"
        android:layout_weight="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tip1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.6"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="考试时间（分钟）："
            android:textSize="12dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_text"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6"
            android:gravity="center"
            android:maxLength="3"
            android:inputType="numberDecimal"
            android:text="40"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_tip2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.4"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/already_send"
            android:textColor="#ff0000"
            android:textSize="12dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/yellow"
            android:text="@string/button_send"
            android:textSize="15sp"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>