<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_lasttime"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="考试时间："
            android:textSize="12dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_start_exam"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/yellow"
            android:text="@string/button_start_examination"
            android:textSize="15sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/yellow"
            android:text="@string/button_submit"
            android:textSize="15sp"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_exam_tip_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/already_start"
        android:textColor="#ff0000"
        android:textSize="14dp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/tv_exam_tip_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/already_start"
        android:textColor="#ff0000"
        android:textSize="14dp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/tv_exam_tip_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/already_start"
        android:textColor="#ff0000"
        android:textSize="14dp"
        android:visibility="visible" />
</LinearLayout>